--- a/MacrosManager/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/MacrosManager/app/src/main/res/menu/bottom_nav_menu.xml
@@ -2,16 +2,9 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-        android:id="@+id/macros"
-        android:title="Macros"
-        />
-    <!--<item
-        android:id="@+id/search"
-        android:title="Search"
-        />-->
+        android:id="@+id/daily_info_fragment"
+        android:title="Macros" />
     <item
-        android:id="@+id/calculator"
-        android:title="Calculator"
-        />
-
+        android:id="@+id/macros_calculator_fragment"
+        android:title="Calculator" />
 </menu>
