--- a/MacrosManager/app/src/main/res/values/styles.xml
+++ b/MacrosManager/app/src/main/res/values/styles.xml
@@ -35,4 +35,19 @@
         <item name="android:textSize">@dimen/body</item>
     </style>
 
+    <style name="MonthYearPickerStyle" parent="Theme.MaterialComponents.DayNight.Dialog.Alert">
+        <item name="android:backgroundTint">@android:color/white</item>
+        <item name="buttonBarNegativeButtonStyle">@android:color/black</item>
+        <item name="buttonBarPositiveButtonStyle">@color/colorAccent</item>
+        <item name="headerBackgroundColor">@color/colorPrimary</item>
+        <item name="headerTextColor">#66000000</item>
+        <item name="headerTextColorSelected">@android:color/black</item>
+        <item name="monthBackgroundColorSelected">@color/colorPrimaryDark</item>
+        <item name="monthTextColor">@android:color/black</item>
+        <item name="monthTextColorDisabled">#4F000000</item>
+        <item name="monthTextColorSelected">@android:color/black</item>
+        <item name="yearTextColor">@android:color/black</item>
+        <item name="yearTextColorSelected">@color/colorPrimaryDark</item>
+    </style>
+
 </resources>
