WRapping up daily info and meal fragments. Calculator and settings finished but need testing.

--- a/MacrosManager/app/src/main/res/layout/fragment_daily_info.xml
+++ b/MacrosManager/app/src/main/res/layout/fragment_daily_info.xml
@@ -25,7 +25,8 @@
         android:layout_marginEnd="@dimen/margin_small_minus"
         android:src="@drawable/ic_add"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent"
+        android:onClick="@{listener}" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/daily_macros_grid_recycler"
